<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="ua.com.hse.safetyaudit.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="@string/pleaseInputInformation"
        android:textSize="24sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_and_time_when_it_happened"
        android:layout_marginTop="16dp"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:hint="@string/dateHappened"
            android:inputType="date"
            android:id="@+id/currentDataHappened"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/timeHappened"
            android:inputType="time"
            android:id="@+id/currentTimeHappened"/>
    </LinearLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/place_where_it_happened"
        android:id="@+id/currentPlace"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/with_whom_happened"
        android:id="@+id/currentWho"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="start"
        android:hint="@string/info_about_happened"
        android:inputType="text"
        android:id="@+id/currentInfo"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/take_photo"
            android:id="@+id/takePhotoOne"
            android:background="@android:drawable/ic_menu_gallery"
            android:onClick="takePhotoOne"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:onClick="currentInfoSave"
            android:text="@string/saveCurrent" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="currentInfoSend"
            android:text="@string/sendCurrent" />
    </LinearLayout>


</LinearLayout>
    </ScrollView>
</LinearLayout>